<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<include layout="@layout/contact_list_topbar"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"/>
    
	<TextView android:text="@string/label_animation"
		android:layout_marginLeft="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="sans-serif-light"
		android:gravity="left"/>        
    <Spinner android:id="@+id/animation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />
    
	<TextView android:text="@string/label_message"
		android:layout_marginTop="15dip"
		android:layout_marginLeft="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="sans-serif-light"
		android:gravity="left"/>        
	<EditText android:id="@+id/message"
		android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:maxLength="80"
		android:singleLine="true"
		android:hint="@string/label_hint_message" />
	
	<CheckBox android:id="@+id/tts"
	    android:text="@string/label_tts"
        android:fontFamily="sans-serif-light"
		android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
	
	<TextView android:text="@string/label_contacts"
        android:layout_marginTop="15dip"
		android:layout_marginLeft="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="sans-serif-light"
		android:gravity="left"/>        
	<ListView android:id="@android:id/list"
        android:layout_marginTop="5dip"
		android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
	<TextView android:id="@android:id/empty"
		android:text="@string/label_no_contact"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="center"
		android:textAppearance="?android:attr/textAppearanceLarge" />
		
	<Button android:id="@+id/send"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
   		android:paddingLeft="20dip"
   		android:paddingRight="20dip"
		android:layout_gravity="center"
		android:text="@string/label_send" />
</LinearLayout>
